<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos" translatable="false">ENHANCe</string>
    <string name="outcome_and_recommendation">Outcome and Recommendation</string>
    <string name="verify_scan_results">Verify Scan Results</string>
    <string name="good_morning">Good Morning!</string>
    <string name="good_afternoon">Good Afternoon!</string>
    <string name="good_evening">Good Evening!</string>
    <string name="login_validate_staff">Staff ID cannot be empty!</string>
    <string name="login_validate_password">Password cannot be empty!</string>
    <string name="login_success_header">Login Successful</string>
    <string name="dashboard_no_records_found">No records found.</string>
    <string name="ocr_instructions">IMPORTANT:  Please ensure that the blood pressure values (Systolic/Diastolic) are visible. \nTake the picture at close range for better detection.  Headers required for Auto-Cropping: Systolic &amp; Diastolic.</string>
    <string name="ocr_app_permissions_header">Enable app permissions</string>
    <string name="ocr_app_permissions_body">To use the OCR functionality, you need to allow access to your camera, gallery and external storage.</string>
    <string name="ocr_image_error_header">Error processing image</string>
    <string name="ocr_image_error_body">The image cannot be processed due to an error.\n\nContact IT support with the following error code if issue persists: %1$s</string>
    <string name="ocr_text_error_header">Nothing to process</string>
    <string name="ocr_text_error_body">We couldn\'t find any handwriting or text to process.  Tip: Ensure the image is clear and cropped to only the values, and exclude any headers (such as \'Systolic\' and \'Diastolic\').</string>
    <string name="resuming_scan">Click on “General Scan” to add more scans</string>
    <string name="verify_scan_update_target_all_header">Update Target Home and Clinic BP</string>
    <string name="verify_scan_update_target_all_body">Are you sure you want to update the patient\'s target home and clinic BP?</string>
    <string name="verify_scan_exit_target_all_header">Discard Changes</string>
    <string name="verify_scan_exit_target_all_body">Are you sure you want to discard any changes to the target home and clinic BP you made?</string>
    <string name="verify_scan_update_target_home_header">Update Target Home BP</string>
    <string name="verify_scan_update_target_home_body">Are you sure you want to update the patient\'s target home BP?</string>
    <string name="verify_scan_exit_target_home_header">Discard Changes</string>
    <string name="verify_scan_exit_target_home_body">Are you sure you want to discard any changes to the target home BP you made?</string>
    <string name="verify_scan_update_target_clinic_header">Update Target Home BP</string>
    <string name="verify_scan_update_target_clinic_body">Are you sure you want to update the patient\'s target clinic BP?</string>
    <string name="verify_scan_exit_target_clinic_header">Discard Changes</string>
    <string name="verify_scan_exit_target_clinic_body">Are you sure you want to discard any changes to the target clinic BP you made?</string>
    <string name="verify_scan_update_data">Updating BP target data</string>
    <string name="verify_scan_update_data_caption">Please wait a moment…</string>
    <string name="update">Update</string>
    <string name="exit">Exit</string>
    <string name="verify_scan_no_update">No changes were made</string>
    <string name="verify_scan_no_update_caption">This is due to the values being the same as the current BP target</string>
    <string name="ok">OK</string>
    <string name="add_empty_column_left">Add an empty column to the left</string>
    <string name="add_empty_column_right">Add an empty column to the right</string>
    <string name="swap_values">Swap the Systolic and Diastolic values</string>
    <string name="remove_row">Remove the row</string>
    <string name="add_new_row">Add a new row</string>
    <string name="functionality">Function: </string>
    <string name="verify_scan_rows">%1$d records have been detected.\n\nTotal records: %2$d</string>
    <string name="verify_scan_no_records">No records detected. Rescan or manually insert them by adding a new row.</string>
    <string name="verify_scan_inadequate_reading_header">Inadequate number of readings</string>
    <string name="verify_scan_inadequate_reading_body">Would you like to rescan the records?</string>
    <string name="verify_scan_calculation_successful">Calculation saved successfully.</string>
    <string name="verify_scan_saving_header">Error saving record</string>
    <string name="verify_scan_saving_body">The app wasn\'t able to save the current record.\n\nIf the issue persists, contact IT support with the following error code: %1$s</string>
    <string name="verify_scan_error_header">Error(s) detected</string>
    <string name="verify_scan_error_body">Do you wish to edit the Systolic/Diastolic values?</string>
    <string name="verify_scan_rescan_header">Rescan current records</string>
    <string name="verify_scan_rescan_body">Do you want to rescan the current records?\n\n(note: your previously scanned records will be saved)</string>
    <string name="verify_scan_discard_header">Discard progress</string>
    <string name="verify_scan_discard_body">Do you want to discard all progress and start over?</string>
    <string name="verify_scan_empty_field">Field is empty.</string>
    <string name="verify_scan_whole_number">Field must only contain whole number.</string>
    <string name="verify_scan_valid_value">Value cannot be below %1$d or above %2$d.</string>
    <string name="verify_scan_invalid_value">Invalid value.</string>
    <string name="verify_scan_replace_value">Replace the value</string>
    <string name="verify_scan_abnormal_value">Abnormal value.</string>
    <string name="verify_scan_erroneous_header">Too many erroneous results</string>
    <string name="verify_scan_erroneous_body">Do you want to rescan the current records to achieve a better accuracy?\n\n(Note: your previously scanned records will be saved)</string>
    <string name="verify_scan_remove_row_header">Remove row</string>
    <string name="verify_scan_remove_row_body">Do you want to remove the selected row?</string>
    <string name="verify_scan_out_of_range_header">Out of range</string>
    <string name="verify_scan_impossible_value">Impossible Value</string>
    <string name="verify_scan_error_body_clinic_bp">Please fill in and validate the Clinic BP values.</string>
    <string name="home_title">Home</string>
    <string name="patient_registration_title">Patient registration</string>
    <string name="settings_title">Settings</string>
    <string name="enhance_edit_photo">Edit Photo</string>
    <string name="enhance_edit_photo_desc">Upload Photo</string>
    <string name="enhance_edit_upload_photo">Tap to change profile picture</string>
    <string name="enhance_edit_particulars">Edit Information</string>
    <string name="enhance_edit_legal_name">Legal Name</string>
    <string name="enhance_edit_patient_id">Patient ID</string>
    <string name="enhance_edit_dob">Date of Birth</string>
    <string name="enhance_edit_gender">Gender</string>
    <string name="enhance_edit_health_info">Edit Health Info</string>
    <string name="enhance_edit_weight">Weight</string>
    <string name="enhance_edit_height">Height</string>
    <string name="enhance_edit_target_sys">Systolic BP</string>
    <string name="enhance_edit_target_dia">Diastolic BP</string>
    <string name="enhance_update_button">Update</string>
    <string name="enhance_user_user_manual">Softcopy of User Manual</string>
    <string name="enhance_user_user_manual_body">You can download the softcopy of the user manual by clicking on the icon above.</string>
    <string name="enhance_user_user_manual_file">ENHANCe User Manual</string>
    <string name="enhance_user_user_guide">User Guide</string>
    <string name="enhance_user_patient"><![CDATA[Patient Registration & Search]]></string>
    <string name="enhance_user_patient_body">Register a new patient by entering their patient ID, target home BP and target clinic BP.\n\nFor registered patients, simply search for them using his/her patient ID</string>
    <string name="enhance_user_scan">Scan Records</string>
    <string name="enhance_user_scan_body">There are 2 scanning options. General Scan for unformatted BP readings and 7 Day Scan for the 7-day chart format. Scan blood pressure (BP) records using the device camera, or select an image from gallery.   IMPORTANT:  To ensure accurate handwriting/text recognition for the next part, you MUST ensure that the \'Clinic/Office BP\' text and the last row of BP readings are within the frame.   The auto-crop box will then appear afterwards and you MUST ensure that both columns of BP readings (systolic &amp; diastolic), are within the cropped box\'s frame.</string>
    <string name="enhance_user_verify_scan">Verify Scan - Check</string>
    <string name="enhance_user_verify_scan_body">Checks by the algorithm confirms for the presence of more than 12 records. Otherwise, it will prompt you to either scan again or proceed with the analysis.\n\nThe algorithm will also prompt you to rescan the current record should it exceed six errors the system.</string>
    <string name="enhance_user_edit">Verify Scan - Edit Values</string>
    <string name="enhance_user_edit_body">You will be alerted of any BP values which are deemed to be abnormal/incorrect by the algorithm (reasons provided).\n\nYou can also edit the BP values should you find any errors. Simply use any of the 5 buttons on the right of each scanned record to make the necessary changes.\n\nNOTE: Should you decide to scan the current records again in general scan, your current progress EXCEPT your previous progress will be deleted. Once all the blood pressure values have been checked, click on calculate average to continue.</string>
    <string name="enhance_user_history">History</string>
    <string name="enhance_user_history_body">You can view the previously recorded average blood pressure values, the date &amp; time it was taken, home BP target and clinic BP target of the selected patient. Clicking on each of these boxes can view the outcome and recommendations of each visit.</string>
    <string name="enhance_user_recommendation">Outcome and Recommendations</string>
    <string name="enhance_user_recommendation_body">You can view the outcome and recommendations of the visit after clicking on calculate average or an individual visit in the history page.\n\nThis page will allow you to view the average home BP, clinic BP, target home &amp; clinic BP, diagnosis of hyptension status and the recommended steps to take after being diagnosed for that visit.</string>
    <string name="enhance_user_dashboard">Dashboard</string>
    <string name="enhance_user_dashboard_body">You can view the Systolic &amp; Diastolic charts of the latest 3 visits to compare the recorded average BP values alongside their respective target BP values. Additionally, clicking on the print button will allow you to print out the charts or save it as a PDF.</string>
    <string name="enhance_user_faq">Frequently Asked Questions</string>
    <string name="enhance_user_faq_body">Q. How to access the scan record page?\n\nANS: You need to search for the patient before you can select the \'Scan Record\' at the bottom navigation bar.\n\nQ. What part of the image should one keep for maximum handwriting/text detection accuracy?\n\nANS: Align your camera such that only the chart fills up the top and bottom of the screen for the best accuracy.\n\nIn the event the OCR does not autocrop, try to only crop the image VERTICALLY and leave only the systolic and diastolic BP values in the cropped image.</string>
</resources>