<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Softcopy User Manual Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_secondary"
            android:padding="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/enhance_user_user_manual"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:clickable="true"
            android:layout_gravity="center"
            android:id="@+id/userManualDoc"
            android:background="@color/theme_secondary_variant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_file_open" />

            <TextView
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/enhance_user_user_manual_file"
                android:textColor="@color/theme_secondary"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_user_manual_body"
            android:textSize="16sp" />

        <!-- Example Guide Section -->

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/light_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_secondary"
            android:padding="16dp"
            android:text="@string/enhance_user_user_guide"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_secondary_variant"
            android:padding="16dp"
            android:text="@string/enhance_user_patient"
            android:textColor="@color/theme_secondary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_patient_body"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/enhance_user_scan"
            android:textColor="@color/theme_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/theme_secondary_variant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_scan_body"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/enhance_user_verify_scan"
            android:textColor="@color/theme_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/theme_secondary_variant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_verify_scan_body"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/enhance_user_edit"
            android:textColor="@color/theme_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/theme_secondary_variant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_edit_body"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/enhance_user_history"
            android:textColor="@color/theme_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/theme_secondary_variant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_history_body"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/enhance_user_recommendation"
            android:textColor="@color/theme_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/theme_secondary_variant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_recommendation_body"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/enhance_user_dashboard"
            android:textColor="@color/theme_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/theme_secondary_variant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_dashboard_body"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/enhance_user_faq"
            android:textColor="@color/theme_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/theme_secondary_variant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/enhance_user_faq_body"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
