<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_navigation">
        <item
            android:id="@+id/item_home"
            android:checkable="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_title"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/item_patient_registration"
            android:checkable="true"
            android:icon="@drawable/ic_person_add"
            android:title="@string/patient_registration_title"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/item_settings"
            android:checkable="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_title"
            app:showAsAction="ifRoom" />
    </group>
</menu>