<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.patient.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.85">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/enhance_edit_photo"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/editPhotoIV"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="3"
                            android:adjustViewBounds="true"
                            android:clickable="true"
                            android:src="@drawable/ic_file_upload"
                            android:contentDescription="@string/enhance_edit_photo_desc"/>

                        <TextView
                            android:id="@+id/editPhotoTV"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="7"
                            android:text="@string/enhance_edit_upload_photo"
                            android:contentDescription="@string/enhance_edit_photo_desc"/>
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/enhance_edit_particulars"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editLegalNameTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enhance_edit_legal_name"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editLegalNameTIET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editIdTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enhance_edit_patient_id"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editIdTIET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editDateOfBirthTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enhance_edit_dob"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editDateOfBirthTIET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:drawableEnd="@drawable/ic_edit_calendar"
                            android:focusable="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editGenderTIL"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enhance_edit_gender"
                        app:errorEnabled="true">

                        <AutoCompleteTextView
                            android:id="@+id/editGenderACTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/enhance_edit_health_info"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editWeightTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enhance_edit_weight"
                        app:errorEnabled="true"
                        app:suffixText="kg">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editWeightTIET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLength="5"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editHeightTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enhance_edit_height"
                        app:errorEnabled="true"
                        app:suffixText="cm">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editHeightTIET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLength="5"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editRegisterHomeSys"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enhance_edit_target_sys"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editRegisterHomeSysInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="3"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editRegisterHomeDia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enhance_edit_target_dia"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editRegisterHomeDiaInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="3"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/updateBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="12dp"
                        android:text="@string/enhance_update_button"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:backgroundTint="@color/primary_button_color" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:isScrollContainer="true"
        app:headerLayout="@layout/header_navigation_drawer"
        app:menu="@menu/navigation_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>
